@@ -1,9 +1,11 @@
 package ro.estore.model.repository.impl;
 
 import org.junit.Assert;
+import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.env.Environment;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,6 +21,9 @@ import ro.estore.util.TestUtils;
 public class ProductRepositoryJpaImplTest {
 
 	@Autowired
+	private Environment env;
+
+	@Autowired
 	private ProductRepository productRepository;
 
 	@Autowired
@@ -26,7 +31,12 @@ public class ProductRepositoryJpaImplTest {
 
 	private String sufix = "_1";
 
-	private static final Long DEFAULT_ID = new Long(1);
+	private Long DEFAULT_ID;
+	
+	@Before
+	public void setUp(){
+		DEFAULT_ID = Long.valueOf(env.getProperty("default.id"));;
+	}
 
 	@Test
 	public void createProductTest() {
