@@ -1,9 +1,11 @@
 package ro.estore.model.repository.impl;
 
 import org.junit.Assert;
+import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.env.Environment;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,12 +21,20 @@ import ro.estore.util.TestUtils;
 public class UserProfileRepositoryJpaImplTest {
 
 	@Autowired
+	private Environment env;
+
+	@Autowired
 	private UserProfileRepository userProfileRepository;
 
 	@Autowired
 	private TestUtils testUtils;
 
-	private static final Long DEFAULT_ID = new Long(1);
+	private Long DEFAULT_ID;
+	
+	@Before
+	public void setUp(){
+		DEFAULT_ID = Long.valueOf(env.getProperty("default.id"));;
+	}
 
 	@Test
 	public void createUserProfileTest() {
